# EnergyOpsChallenge

eo-tech-challenge/: .gitignore  README.md  eo_tech_challenge_async.db  pyproject.toml  test_main.http
eo-tech-challenge/.github/: CODEOWNERS
eo-tech-challenge/app/: config.py  main.py
eo-tech-challenge/app/api/routers/: contract.py  event.py
eo-tech-challenge/app/api/services/: contract_services.py  event_services.py
eo-tech-challenge/app/db/: session.py
eo-tech-challenge/app/db/crud/: contract.py  event.py
eo-tech-challenge/app/db/models/: __init__.py  contract.py  event.py
eo-tech-challenge/app/dto/: contract.py  event.py
eo-tech-challenge/tests/: conftest.py
eo-tech-challenge/tests/api/: test_contract.py  test_event.py
