[tool.poetry]
name = "eo-tech-challenge"
version = "0.1.0"
description = "Energy Ooperations Tech Challenge API"
authors = ["F.Hoxha <f.hoxha@sonnen.de>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.116.1"
uvicorn = "0.35.0"
pytest = "8.4.1"
pytest-mock = "3.14.1"
pydantic-settings = "2.12.0"
greenlet = "3.2.4"
sqlmodel = "0.0.24"
aiosqlite = "0.21.0"
loguru = "0.7.3"
httpx = "0.27.2"
pytest-asyncio = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
